tests/algorithms/transpiler/CPP/maths/entropy.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:81:215: warning: multi-character character constant [-Wmultichar]
   81 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:81:251: warning: multi-character character constant [-Wmultichar]
   81 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:123:148: warning: multi-character character constant [-Wmultichar]
  123 |     os << '{' << "'single': "<< "{"; bool first_0=true; for(const auto& p: v.single){ if(!first_0) os << ", "; first_0=false; os << p.first; os << ': '; os << p.second; } os << "}"
      |                                                                                                                                                    ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:124:143: warning: multi-character character constant [-Wmultichar]
  124 |  << ", " << "'double': "<< "{"; bool first_1=true; for(const auto& p: v.double){ if(!first_1) os << ", "; first_1=false; os << p.first; os << ': '; os << p.second; } os << "}"
      |                                                                                                                                               ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:118:5: error: multiple types in one declaration
  118 |     std::map<std::string, int64_t> double;
      |     ^~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:118:36: error: declaration does not declare anything [-fpermissive]
  118 |     std::map<std::string, int64_t> double;
      |                                    ^~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp: In function ‘std::ostream& operator<<(std::ostream&, const TextCounts&)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:124:73: error: expected unqualified-id before ‘double’
  124 |  << ", " << "'double': "<< "{"; bool first_1=true; for(const auto& p: v.double){ if(!first_1) os << ", "; first_1=false; os << p.first; os << ': '; os << p.second; } os << "}"
      |                                                                         ^~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:124:73: error: expected ‘)’ before ‘double’
  124 |  << ", " << "'double': "<< "{"; bool first_1=true; for(const auto& p: v.double){ if(!first_1) os << ", "; first_1=false; os << p.first; os << ': '; os << p.second; } os << "}"
      |                                                       ~                 ^~~~~~
      |                                                                         )
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:124:79: error: expected unqualified-id before ‘)’ token
  124 |  << ", " << "'double': "<< "{"; bool first_1=true; for(const auto& p: v.double){ if(!first_1) os << ", "; first_1=false; os << p.first; os << ': '; os << p.second; } os << "}"
      |                                                                               ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp: In function ‘TextCounts analyze_text(std::string)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:45: error: either all initializer clauses should be designated or none of them should be
  167 |         return TextCounts{.single = single, .double = _double};
      |                                             ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:45: error: too many initializers for ‘TextCounts’
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:26: error: expected primary-expression before ‘{’ token
  167 |         return TextCounts{.single = single, .double = _double};
      |                          ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:26: error: expected ‘;’ before ‘{’ token
  167 |         return TextCounts{.single = single, .double = _double};
      |                          ^
      |                          ;
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:27: error: expected primary-expression before ‘.’ token
  167 |         return TextCounts{.single = single, .double = _double};
      |                           ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:45: error: expected primary-expression before ‘.’ token
  167 |         return TextCounts{.single = single, .double = _double};
      |                                             ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:167:46: error: expected unqualified-id before ‘double’
  167 |         return TextCounts{.single = single, .double = _double};
      |                                              ^~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:41: error: either all initializer clauses should be designated or none of them should be
  194 |     return TextCounts{.single = single, .double = _double};
      |                                         ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:41: error: too many initializers for ‘TextCounts’
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:22: error: expected primary-expression before ‘{’ token
  194 |     return TextCounts{.single = single, .double = _double};
      |                      ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:22: error: expected ‘;’ before ‘{’ token
  194 |     return TextCounts{.single = single, .double = _double};
      |                      ^
      |                      ;
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:23: error: expected primary-expression before ‘.’ token
  194 |     return TextCounts{.single = single, .double = _double};
      |                       ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:41: error: expected primary-expression before ‘.’ token
  194 |     return TextCounts{.single = single, .double = _double};
      |                                         ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:194:42: error: expected unqualified-id before ‘double’
  194 |     return TextCounts{.single = single, .double = _double};
      |                                          ^~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp: In function ‘void calculate_entropy(std::string)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:226:35: error: expected unqualified-id before ‘double’
  226 |     for (const auto& __p : counts.double) {
      |                                   ^~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:226:35: error: expected ‘)’ before ‘double’
  226 |     for (const auto& __p : counts.double) {
      |         ~                         ^~~~~~
      |                                   )
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:226:41: error: expected unqualified-id before ‘)’ token
  226 |     for (const auto& __p : counts.double) {
      |                                         ^
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:238:340: error: expected unqualified-id before ‘double’
  238 |             if (([&](const auto& __c, const auto& __v){ if constexpr(std::is_same_v<std::decay_t<decltype(__c)>, std::string>) { return __c.find(__v) != std::string::npos; } else if constexpr(requires { __c.find(__v); }) { return __c.find(__v) != __c.end(); } else { return std::find(__c.begin(), __c.end(), __v) != __c.end(); } })(counts.double, seq)) {
      |                                                                                                                                                                                                                                                                                                                                                    ^~~~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/maths/entropy.cpp:239:172: error: expected unqualified-id before ‘double’
  239 |                 double prob = ((double)((double)(([&](const auto& __m){ auto __it = __m.find(seq); if (__it == __m.end()) return int64_t{}; return __it->second; })(counts.double))) / ((double)(total2)));
      |                                                                                                                                                                            ^~~~~~
